--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>MX$</title>
+<title>MX$ - Versão 1.0</title>
 <style>
   :root { font-family: Inter, Segoe UI, Helvetica, Arial, sans-serif; }
   body { background:#f6f7fb; color:#111; margin:0; padding:0; }
@@ -33,7 +33,7 @@
 </style>
 </head>
 <body>
-<h1>MX$</h1>
+<h1>MX$ - Versão 1.0</h1>
 <main>
   <div class="row">
     <div>
