--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html lang="pt-BR">
 <head>
 <meta charset="utf-8" />
@@ -9,9 +9,10 @@
   body { background:#f6f7fb; color:#111; margin:0; padding:0; }
   h1 { text-align:center; font-size:2rem; margin:1rem 0; }
   main { max-width:700px; margin:auto; background:#fff; padding:1.5rem; border-radius:16px; box-shadow:0 0 10px #ccc; }
-  label { display:block; margin-top:1rem; font-weight:600; }
+  label { display:block; margin-top:1rem; font-weight:600; text-align:center; } /* Centralizado os labels */
   input[type="number"], input[type="text"] {
     width:100%; padding:0.5rem; font-size:1rem; border:1px solid #ccc; border-radius:8px;
+    text-align:center; /* Centraliza os valores digitáveis */
   }
   .row { display:grid; grid-template-columns:1fr 1fr; gap:1rem; align-items:center; }
   button {
@@ -54,11 +55,11 @@
 
   <div id="mults" class="row">
     <div>
-      <label>Multiplicador (aposta perdeu)</label>
+      <label>Red</label>
       <input type="number" id="multP1" step="0.01" />
     </div>
     <div>
-      <label>Multiplicador (aposta ganhou)</label>
+      <label>Green</label>
       <input type="number" id="multV2" step="0.01" />
     </div>
   </div>
@@ -154,7 +155,6 @@ document.getElementById('btnConcluir').onclick = () => {
 
   let mult = perdeu ? mults.p1 : mults.v2;
 
-  // 🔹 Implementação da lógica "última vitória e penúltima derrota"
   let baseValor = valor;
   if (history.length >= 2) {
     const ultima = history[history.length - 1];
@@ -174,7 +174,6 @@ document.getElementById('btnConcluir').onclick = () => {
 
   valorTotalEl.value = (baseValor * mult).toFixed(2);
 
-  // 🔸 Limpa campos após registrar aposta
   oddAEl.value = '';
   chkPerdeu.checked = false;
   resultadoEl.innerHTML = '';
