--- a/plans.html
+++ b/plans.html
@@ -1,13 +1,21 @@
-<!DOCTYPE html><html lang="pt-BR">
+<!DOCTYPE html>
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Planos MX$</title>  <!-- Supabase -->  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.29.0/dist/supabase.min.js"></script>  <!-- Stripe -->  <script src="https://js.stripe.com/v3/"></script>  <style>
+  <title>Planos MX$</title>
+
+  <!-- Supabase -->
+  <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.29.0/dist/supabase.min.js"></script>
+
+  <!-- Stripe -->
+  <script src="https://js.stripe.com/v3/"></script>
+
+  <style>
     body {
       font-family: Inter, Arial, sans-serif;
       background: #f6f7fb;
       margin: 0;
-      padding: 0;
       color: #111;
     }
 
@@ -17,8 +25,6 @@
       padding: 2.5rem 1rem;
       text-align: center;
     }
-
-    h1 { margin: 0; }
 
     .plans {
       max-width: 1000px;
@@ -35,13 +41,6 @@
       padding: 2rem 1.5rem;
       box-shadow: 0 10px 25px rgba(0,0,0,0.08);
       text-align: center;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-    }
-
-    .plan h2 {
-      margin: 0 0 0.5rem;
     }
 
     .price {
@@ -49,12 +48,6 @@
       font-weight: 700;
       margin: 1rem 0;
       color: #4a90e2;
-    }
-
-    .desc {
-      font-size: 0.95rem;
-      color: #555;
-      margin-bottom: 1.5rem;
     }
 
     button {
@@ -65,10 +58,7 @@
       color: #fff;
       font-size: 1rem;
       cursor: pointer;
-      transition: background 0.2s;
     }
-
-    button:hover { background: #357abd; }
 
     .loading {
       text-align: center;
@@ -82,80 +72,95 @@
       color: #666;
       font-size: 0.9rem;
     }
-  </style></head>
-<body><header>
+  </style>
+</head>
+
+<body>
+
+<header>
   <h1>Escolha seu plano MX$</h1>
   <p>Acesso completo ao app enquanto sua assinatura estiver ativa</p>
-</header><div id="loading" class="loading">Verificando login...</div><section id="plans" class="plans" style="display:none;">  <div class="plan">
+</header>
+
+<div id="loading" class="loading">Verificando login...</div>
+
+<section id="plans" class="plans" style="display:none;">
+  <div class="plan">
     <h2>Mensal</h2>
     <div class="price">R$ 49,90</div>
-    <div class="desc">Ideal para testar o app sem compromisso</div>
-    <button data-price="price_1Sb2liIrLyzh0kTrj2sUPVQp">Assinar Mensal</button>
-  </div>  <div class="plan">
+    <button data-price="price_1Sb2liIrLyzh0kTrj2sUPVQp">Assinar</button>
+  </div>
+
+  <div class="plan">
     <h2>Semestral</h2>
     <div class="price">R$ 239,90</div>
-    <div class="desc">Economia e acesso por 6 meses</div>
-    <button data-price="price_1Sb2liIrLyzh0kTr2jzoWNjW">Assinar Semestral</button>
-  </div>  <div class="plan">
+    <button data-price="price_1Sb2liIrLyzh0kTr2jzoWNjW">Assinar</button>
+  </div>
+
+  <div class="plan">
     <h2>Anual</h2>
     <div class="price">R$ 359,90</div>
-    <div class="desc">Melhor custo-benefício (12 meses)</div>
-    <button data-price="price_1Sb2liIrLyzh0kTrtoYXI7TV">Assinar Anual</button>
-  </div></section><footer>
+    <button data-price="price_1Sb2liIrLyzh0kTrtoYXI7TV">Assinar</button>
+  </div>
+</section>
+
+<footer>
   © MX$ • Pagamentos seguros via Stripe
-</footer><script>
+</footer>
+
+<script>
   const SUPABASE_URL = "https://ogosbyjhxjatukdhkiqw.supabase.co";
-  const SUPABASE_ANON_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9nb3NieWpoeGphdHVrZGhraXF3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjUwMzIzMDUsImV4cCI6MjA4MDYwODMwNX0.-KbpngKGuRluFRdNcdKP14X13yUJIOzLaqjDyWAYHVc";
+  const SUPABASE_ANON_KEY = "SUA_ANON_KEY_AQUI";
 
   const supabase = Supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+  const stripe = Stripe("SUA_PUBLIC_KEY_STRIPE");
 
-  const stripe = Stripe("pk_test_51SX5qDIrLyzh0kTrlUoIADRWlzgMIYQh827VH5rUG0r4B32nN56SfmP2Wn7kBS9ltkeF8b7romn3leJH0Dc04rOk00PZY5X4hZ");
+  let currentUser = null;
 
-  async function init() {
-    const { data: { session } } = await supabase.auth.getSession();
-
+  // 🔐 ESCUTA LOGIN CORRETAMENTE
+  supabase.auth.onAuthStateChange((event, session) => {
     if (!session) {
       window.location.href = "login.html";
       return;
     }
 
+    currentUser = session.user;
     document.getElementById("loading").style.display = "none";
     document.getElementById("plans").style.display = "grid";
+  });
 
-    document.querySelectorAll("button[data-price]").forEach(btn => {
-      btn.addEventListener("click", async () => {
-        btn.disabled = true;
-        btn.innerText = "Redirecionando...";
+  document.querySelectorAll("button[data-price]").forEach(btn => {
+    btn.addEventListener("click", async () => {
+      btn.disabled = true;
+      btn.innerText = "Redirecionando...";
 
-        const res = await fetch(
-          "https://ogosbyjhxjatukdhkiqw.supabase.co/functions/v1/create-checkout-session-",
-          {
-            method: "POST",
-            headers: {
-              "Content-Type": "application/json",
-              "Authorization": `Bearer ${SUPABASE_ANON_KEY}`
-            },
-            body: JSON.stringify({
-              priceId: btn.dataset.price,
-              userId: session.user.id
-            })
-          }
-        );
-
-        const data = await res.json();
-
-        if (data.sessionId) {
-          stripe.redirectToCheckout({ sessionId: data.sessionId });
-        } else {
-          alert("Erro ao iniciar pagamento");
-          console.error(data);
-          btn.disabled = false;
-          btn.innerText = "Assinar";
+      const res = await fetch(
+        "https://ogosbyjhxjatukdhkiqw.supabase.co/functions/v1/create-checkout-session-",
+        {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+            "Authorization": `Bearer ${SUPABASE_ANON_KEY}`
+          },
+          body: JSON.stringify({
+            priceId: btn.dataset.price,
+            userId: currentUser.id
+          })
         }
-      });
-    });
-  }
+      );
 
-  init();
-</script></body>
+      const data = await res.json();
+
+      if (data.sessionId) {
+        stripe.redirectToCheckout({ sessionId: data.sessionId });
+      } else {
+        alert("Erro ao iniciar pagamento");
+        btn.disabled = false;
+        btn.innerText = "Assinar";
+      }
+    });
+  });
+</script>
+
+</body>
 </html>
