--- a/plans.html
+++ b/plans.html
@@ -43,11 +43,21 @@
       text-align: center;
     }
 
+    .plan h2 {
+      margin: 0 0 0.5rem;
+    }
+
     .price {
       font-size: 1.8rem;
       font-weight: 700;
       margin: 1rem 0;
       color: #4a90e2;
+    }
+
+    .desc {
+      font-size: 0.95rem;
+      color: #555;
+      margin-bottom: 1.5rem;
     }
 
     button {
@@ -58,6 +68,10 @@
       color: #fff;
       font-size: 1rem;
       cursor: pointer;
+    }
+
+    button:hover {
+      background: #357abd;
     }
 
     .loading {
@@ -76,7 +90,6 @@
 </head>
 
 <body>
-
 <header>
   <h1>Escolha seu plano MX$</h1>
   <p>Acesso completo ao app enquanto sua assinatura estiver ativa</p>
@@ -88,18 +101,21 @@
   <div class="plan">
     <h2>Mensal</h2>
     <div class="price">R$ 49,90</div>
+    <div class="desc">Ideal para testar o app sem compromisso</div>
     <button data-price="price_1Sb2liIrLyzh0kTrj2sUPVQp">Assinar</button>
   </div>
 
   <div class="plan">
     <h2>Semestral</h2>
     <div class="price">R$ 239,90</div>
+    <div class="desc">Economia e acesso por 6 meses</div>
     <button data-price="price_1Sb2liIrLyzh0kTr2jzoWNjW">Assinar</button>
   </div>
 
   <div class="plan">
     <h2>Anual</h2>
     <div class="price">R$ 359,90</div>
+    <div class="desc">Melhor custo-benefício (12 meses)</div>
     <button data-price="price_1Sb2liIrLyzh0kTrtoYXI7TV">Assinar</button>
   </div>
 </section>
@@ -113,54 +129,26 @@
   const SUPABASE_ANON_KEY =
     "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im9nb3NieWpoeGphdHVrZGhraXF3Iiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjUwMzIzMDUsImV4cCI6MjA4MDYwODMwNX0.-KbpngKGuRluFRdNcdKP14X13yUJIOzLaqjDyWAYHVc";
 
-  const supabaseClient = window.supabase.createClient(
-    SUPABASE_URL,
-    SUPABASE_ANON_KEY
-  );
-
-  const stripe = Stripe(
-    "pk_test_51SX5qDIrLyzh0kTrlUoIADRWlzgMIYQh827VH5rUG0r4B32nN56SfmP2Wn7kBS9ltkeF8b7romn3leJH0Dc04rOk00PZY5X4hZ"
-  );
+  const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+  const stripe = Stripe("pk_test_51SX5qDIrLyzh0kTrlUoIADRWlzgMIYQh827VH5rUG0r4B32nN56SfmP2Wn7kBS9ltkeF8b7romn3leJH0Dc04rOk00PZY5X4hZ");
 
   let currentUser = null;
-  let resolved = false;
 
-  function showPlans(user) {
-    if (resolved) return;
-    resolved = true;
-    currentUser = user;
+  async function init() {
+    const { data, error } = await supabase.auth.getSession();
+
+    if (error || !data?.session?.user) {
+      window.location.href = "login.html";
+      return;
+    }
+
+    currentUser = data.session.user;
+
     document.getElementById("loading").style.display = "none";
     document.getElementById("plans").style.display = "grid";
   }
 
-  function redirectLogin() {
-    if (resolved) return;
-    resolved = true;
-    window.location.href = "login.html";
-  }
-
-  // Listener principal (mais confiável)
-  supabaseClient.auth.onAuthStateChange((event, session) => {
-    if (session?.user) {
-      showPlans(session.user);
-    }
-  });
-
-  // Fallback
-  setTimeout(async () => {
-    if (resolved) return;
-    const { data } = await supabaseClient.auth.getSession();
-    if (data?.session?.user) {
-      showPlans(data.session.user);
-    } else {
-      redirectLogin();
-    }
-  }, 600);
-
-  // Segurança anti-loop
-  setTimeout(() => {
-    if (!resolved) redirectLogin();
-  }, 3000);
+  init();
 
   // Checkout Stripe
   document.querySelectorAll("button[data-price]").forEach(btn => {
@@ -168,26 +156,30 @@
       btn.disabled = true;
       btn.innerText = "Redirecionando...";
 
-      const res = await fetch(
-        "https://ogosbyjhxjatukdhkiqw.supabase.co/functions/v1/create-checkout-session-",
-        {
-          method: "POST",
-          headers: {
-            "Content-Type": "application/json",
-            "Authorization": `Bearer ${SUPABASE_ANON_KEY}`
-          },
-          body: JSON.stringify({
-            priceId: btn.dataset.price,
-            userId: currentUser.id
-          })
+      try {
+        const res = await fetch(
+          "https://ogosbyjhxjatukdhkiqw.supabase.co/functions/v1/create-checkout-session-",
+          {
+            method: "POST",
+            headers: {
+              "Content-Type": "application/json",
+              "Authorization": `Bearer ${SUPABASE_ANON_KEY}`
+            },
+            body: JSON.stringify({
+              priceId: btn.dataset.price,
+              userId: currentUser.id
+            })
+          }
+        );
+
+        const data = await res.json();
+
+        if (data.sessionId) {
+          stripe.redirectToCheckout({ sessionId: data.sessionId });
+        } else {
+          throw new Error("Sessão Stripe inválida");
         }
-      );
-
-      const data = await res.json();
-
-      if (data.sessionId) {
-        stripe.redirectToCheckout({ sessionId: data.sessionId });
-      } else {
+      } catch (err) {
         alert("Erro ao iniciar pagamento");
         btn.disabled = false;
         btn.innerText = "Assinar";
@@ -195,6 +187,5 @@
     });
   });
 </script>
-
 </body>
 </html>
